--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,5 +15,5 @@
 homepage: "https://questfon.cloud/call-tracking/"
 documentation: "https://www.questfon.cloud/call-tracking/integration/"
 versions:
-  - sha: c3db0148f3e0aeee2ae32c19c8fc773aab2baec2
-    changeNotes: initial template check in
+  - sha: 6fb07cf2a72772bc8b381edd88ecbf4eebf3fd0d
+    changeNotes: prd url updated
